Implementación de middleware para proteger los datos del usuario en auth.middleware.js
