# routes/user.routes.js
@@ -1,12 +1,13 @@
 import { Router } from 'express';
 
 import { getUser, getUsers } from "../controllers/user.controller.js";
+import authorize from "../middleware/auth.middleware.js";
 
 const userRouter = Router();
 
 userRouter.get('/', getUsers);
 
-userRouter.get('/:id', getUser);
+userRouter.get('/:id', authorize, getUser);
 
 userRouter.post('/', (req, res) => { res.send({ title: 'CREATE: Creando nuevo usuario' }); });
 
